--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,7 +1,8 @@
 // Add your dependencies here
 
 dependencies {
-    implementation 'com.github.GTNewHorizons:NotEnoughItems:2.3.54-GTNH:dev'
+    implementation 'com.github.GTNewHorizons:NotEnoughItems:2.3.83-GTNH:dev'
+    devOnlyNonPublishable("com.github.GTNewHorizons:twilightforest:2.4.5:dev")
 
     // For testing translations
     runtimeOnly 'com.github.GTNewHorizons:TX-Loader:1.5.2'
