--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,7 +2,7 @@
 
 dependencies {
     implementation 'com.github.GTNewHorizons:NotEnoughItems:2.4.3-GTNH:dev'
-    implementation 'com.github.GTNewHorizons:DuraDisplay:1.1.3:dev'
+    compileOnly 'com.github.GTNewHorizons:DuraDisplay:1.1.3:dev'
 
     // For testing translations
     runtimeOnly 'com.github.GTNewHorizons:TX-Loader:1.5.3'
