--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,6 +1,7 @@
 // Add your dependencies here
 
 dependencies {
+    compileOnly("org.jetbrains:annotations:26.0.2-1")
     implementation 'com.github.GTNewHorizons:NotEnoughItems:2.8.0-GTNH:dev'
     compileOnly 'com.github.GTNewHorizons:DuraDisplay:1.3.4:dev'
 
